--- a/Rincon/Pages/LoginPage.xaml
+++ b/Rincon/Pages/LoginPage.xaml
@@ -9,14 +9,15 @@
     x:DataType="viewModels:LoginViewModel"
     x:TypeArguments="viewModels:LoginViewModel"
     Shell.NavBarIsVisible="false"
-    BackgroundColor="#AAA">
+    BackgroundColor="#AD6B2A">
+    
 
-    <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="Center">
-        <StackLayout  HorizontalOptions="CenterAndExpand">
-            <Image Source="rincon_login.png" WidthRequest="300"/>
+    <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="Center" Margin="0" Padding="0">
+        <StackLayout  HorizontalOptions="CenterAndExpand" Margin="0,0,0,50">
+            <Image Source="logo_login.png" WidthRequest="456" HeightRequest="248" Margin="0,0,0,0"/>
         </StackLayout>
 
-        <StackLayout Margin="0,12,0,0" HeightRequest="32" WidthRequest="400">
+        <StackLayout >
             <ActivityIndicator
                 HeightRequest="32"
                 IsRunning="True"
@@ -24,51 +25,72 @@
                 WidthRequest="32" />
         </StackLayout>
 
-        <Frame Margin="0,20,0,0" CornerRadius="30" BackgroundColor="Grey" BorderColor="Transparent" HeightRequest="50" Padding="0,-10,0,-10">
-            <Entry
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="550"/>
+                <ColumnDefinition Width="550" />
+            </Grid.ColumnDefinitions>
+            <Frame Grid.Column="0" HasShadow="True" BackgroundColor="#4A744C" MaximumHeightRequest="350" MaximumWidthRequest="500" BorderColor="#40000000">
                 
-                BackgroundColor="Transparent"
-                HeightRequest="60"
-                PlaceholderColor="Black"
-                AutomationId="userNameEntry"
-                HorizontalOptions="FillAndExpand"
-                IsEnabled="{Binding IsEnabled}"
-                MaxLength="25"
-                Placeholder="{extensions:Localize Username}"
-                Text="{Binding Username}" />
-        </Frame>
+                <StackLayout Orientation="Vertical" VerticalOptions="Center" >
+                    <ImageButton Source="operator_login_icon.png" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="148.6" WidthRequest="129.89" BackgroundColor="#4A744C"></ImageButton>
+                    <Label Text="Operarios" HorizontalTextAlignment="Center" FontSize="23"/>
+                </StackLayout>
+            </Frame>
+            <Frame Grid.Column="1" HasShadow="True" BackgroundColor="#D3AA84" MaximumHeightRequest="350" MaximumWidthRequest="500" BorderColor="#40000000">
+                <StackLayout>
 
-        <Frame Margin="0,20,0,10" CornerRadius="30" BackgroundColor="Gray" BorderColor="Transparent" HeightRequest="50" Padding="0,-10,0,-10">
-            <Entry
-                VerticalOptions="Center"
-                HeightRequest="60"
-                PlaceholderColor="Black"
-                HorizontalOptions="FillAndExpand"
-                IsEnabled="{Binding IsEnabled}"
-                IsPassword="true"
-                MaxLength="50"
-                Placeholder="{extensions:Localize Password}"
-                Text="{Binding Password}" />
-        </Frame>
-        
-        <Label Text="{extensions:Localize RecoverPassword}" HorizontalTextAlignment="End" TextColor="Black"/>
-        
-        
-        <Button
-            BackgroundColor="#F5F5F5"
-            Margin="0,60,0,0"
-            TextColor="Black"
-            Command="{Binding LoginCommand}"
-            Text="{extensions:Localize Login}" />
+                    <Frame Margin="0,15,0,0" CornerRadius="18" BackgroundColor="#FAFAFA" BorderColor="Transparent" HeightRequest="35" WidthRequest="409" Padding="0,-10,0,-10">
+                        <Entry
+                            BackgroundColor="Transparent"
+                            HeightRequest="35"
+                            PlaceholderColor="#797979"
+                            AutomationId="userNameEntry"
+                            HorizontalOptions="FillAndExpand"
+                            IsEnabled="{Binding IsEnabled}"
+                            MaxLength="25"
+                            Placeholder="{extensions:Localize Username}"
+                            Text="{Binding Username}"
+                            TextColor="#303030"/>
+                    </Frame>
+
+                    <Frame Margin="0,15,0,15" CornerRadius="18" BackgroundColor="#FAFAFA" BorderColor="Transparent" HeightRequest="35" WidthRequest="409" Padding="0,-10,0,-10">
+                        <Entry
+                            VerticalOptions="Center"
+                            TextColor="#303030"
+                            HeightRequest="35"
+                            PlaceholderColor="#797979"
+                            HorizontalOptions="FillAndExpand"
+                            IsEnabled="{Binding IsEnabled}"
+                            IsPassword="true"
+                            MaxLength="50"
+                            Placeholder="{extensions:Localize Password}"
+                            Text="{Binding Password}" />
+                    </Frame>
+
+                    <Label Text="{extensions:Localize RecoverPassword}" HorizontalTextAlignment="End" TextColor="#79280F"/>
 
 
-        <Button
-            BackgroundColor="Grey"
-            Margin="0,20,0,0"
-            TextColor="Black"
-            Command="{Binding LoginWithActiveDirectoryCommand}"
-            Text="{extensions:Localize SignUp}" />
-        
+                    <Button
+                        BackgroundColor="#79280F"
+                        Margin="0,46,0,0"
+                        TextColor="#FAFAFA"
+                        Command="{Binding LoginCommand}"
+                        Text="{extensions:Localize Login}" 
+                        CornerRadius="9"/>
+
+
+                    <Button
+                        BackgroundColor="#4A744C"
+                        Margin="0,15,0,0"
+                        TextColor="#FAFAFA"
+                        Command="{Binding CheckinCommand}"
+                        Text="{extensions:Localize SignUp}" 
+                        CornerRadius="9"/>
+
+                </StackLayout>
+            </Frame>
+        </Grid>
     </StackLayout>
 
 </pages:BaseContentPage>
