--- a/Rincon/Pages/HomePage.xaml
+++ b/Rincon/Pages/HomePage.xaml
@@ -7,41 +7,121 @@
     xmlns:pages="clr-namespace:Rincon.Common.Pages;assembly=Rincon.Common"
     xmlns:viewModels="clr-namespace:Rincon.ViewModels"
     x:DataType="viewModels:HomeViewModel"
+    xmlns:models="clr-namespace:Rincon.Models;assembly=Rincon.Models"
+    Shell.NavBarIsVisible="false"
     x:TypeArguments="viewModels:HomeViewModel">
 
-    <ScrollView>
-        <VerticalStackLayout
-            Padding="30,0"
-            Spacing="25"
-            VerticalOptions="Center">
-
-            <Image
-                HeightRequest="200"
+    <Grid RowDefinitions="60,60,*" ColumnDefinitions="*,*,*,*,*" BackgroundColor="#AD6B2A" ColumnSpacing="0" RowSpacing="0" >
+        <ImageButton Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" Source="rincon_home.png" Margin="20,0,0,0" HeightRequest="48.49" WidthRequest="232.53" BackgroundColor="#AD6B2A" HorizontalOptions="StartAndExpand"/>
+        <Button
+                Grid.Row="1"
+                Grid.Column="0"
+                 Margin="20,0,20,0"
+                 BackgroundColor="#D3AA84"
+                 HorizontalOptions="Center"
+                 HeightRequest="45"
+                 WidthRequest="216"
+                 TextColor="#000000"
+                 Text="Gestión de stock" />
+        <Button
+                Grid.Row="1"
+                Grid.Column="1"
+                Margin="20,0,20,0"
+                BackgroundColor="#D3AA84"
                 HorizontalOptions="Center"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
-                Source="dotnet_bot.png" />
+                HeightRequest="45"
+                WidthRequest="216"
+                TextColor="#000000"
+                Text="Tareas" />
+        <Button
+                Grid.Row="1"
+                Grid.Column="2"
+                 Margin="20,0,20,0"
+                 BackgroundColor="#D3AA84"
+                 HorizontalOptions="Center"
+                 HeightRequest="45"
+                 WidthRequest="216"
+                 TextColor="#000000"
+                 Text="Pedidos" />
+        <Button
+                Grid.Row="1"
+                Grid.Column="3"
+                 Margin="20,0,20,0"
+                 BackgroundColor="#D3AA84"
+                 HorizontalOptions="Center"
+                 HeightRequest="45"
+                 WidthRequest="216"
+                 TextColor="#000000"
+                 Text="Historial" />
+        <Button
+                Grid.Row="1"
+                Grid.Column="4"
+                 Margin="20,0,20,0"
+                 BackgroundColor="#D3AA84"
+                 HorizontalOptions="Center"
+                 HeightRequest="45"
+                 WidthRequest="295"
+                 TextColor="#000000"
+                 Text="Añadir producto" />
 
-            <Label
-                FontSize="32"
-                HorizontalOptions="Center"
-                SemanticProperties.HeadingLevel="Level1"
-                Text="{extensions:Localize AppTitle}" />
-
-            <Label
-                FontSize="18"
-                HorizontalOptions="Center"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I"
-                SemanticProperties.HeadingLevel="Level2"
-                Text="Welcome to .NET Multi-platform App UI" />
-
-            <Button
-                x:Name="CounterBtn"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Center"
-                SemanticProperties.Hint="Counts the number of times you click"
-                Text="Click me" />
-
-        </VerticalStackLayout>
-    </ScrollView>
-
+        <Grid Grid.Row="2" Grid.ColumnSpan="4" BackgroundColor="White"  RowDefinitions="*,*,*,*" ColumnDefinitions="*,*" RowSpacing="20" ColumnSpacing="20" Padding="20">
+            <Frame BackgroundColor="#EAEAEA" BorderColor="Transparent" Grid.Row="0" Padding="10" >
+                <Grid ColumnDefinitions="*,*,*" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand">
+                    <ImageButton Grid.Column="0" Source ="add_direct_home.png" VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
+                    <ImageButton Grid.Column="1" Source="change_direct_home.png"  VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
+                    <ImageButton Grid.Column="2" Source="edit_direct_home.png"  VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand"/>
+                </Grid>
+            </Frame>
+            <Frame BackgroundColor="#EAEAEA" BorderColor="Transparent" Grid.Row="1" Grid.RowSpan="4" >
+                <StackLayout Orientation="Vertical" Padding="10" Margin="0">
+                    <Label Text="Tareas" TextColor="Gray"/>
+                    <BoxView HeightRequest="1" BackgroundColor="Gray"  VerticalOptions="Start" HorizontalOptions="FillAndExpand"/>
+                </StackLayout>
+            </Frame>
+            <Frame BackgroundColor="#EAEAEA" BorderColor="Transparent" Grid.Row="0" Grid.Column="1" Grid.RowSpan="2" >
+                <StackLayout Orientation="Vertical" Padding="10" Margin="0">
+                    <Label Text="Reservas" TextColor="Gray"/>
+                    <BoxView HeightRequest="1" BackgroundColor="Gray" VerticalOptions="Start" HorizontalOptions="FillAndExpand"/>
+                </StackLayout>
+            </Frame>
+            <Frame BackgroundColor="#EAEAEA" BorderColor="Transparent" Grid.Row="2" Grid.Column="1" Grid.RowSpan="2" >
+                <StackLayout Orientation="Vertical" Padding="10" Margin="0">
+                    <Label Text="Notas" TextColor="Gray"/>
+                    <BoxView HeightRequest="1" BackgroundColor="Gray"  VerticalOptions="Start" HorizontalOptions="FillAndExpand"/>
+                </StackLayout>
+            </Frame>
+        </Grid>
+        
+        <Grid RowDefinitions="auto,*" Grid.Row="2" Grid.Column="4"  BackgroundColor="#D3AA84" Padding="10,10,10,10" RowSpacing="10">
+            <Frame Grid.Row="0" Margin="0,15,0,15" CornerRadius="12" BackgroundColor="#FAFAFA" BorderColor="Transparent" HeightRequest="30" WidthRequest="275" Padding="0,-10,0,-10">
+                <StackLayout Orientation="Horizontal">
+                    <Image Source="search_icon.png" WidthRequest="19" Margin="15,0,0,0"/>
+                    <Entry
+                        BackgroundColor="Transparent"
+                        HeightRequest="35"
+                        PlaceholderColor="#797979"
+                        AutomationId="userNameEntry"
+                        HorizontalOptions="FillAndExpand"
+                        MaxLength="25"
+                        TextColor="#303030"/>
+                </StackLayout>
+            </Frame>
+            <CollectionView ItemsSource="{Binding Source={RelativeSource AncestorType={x:Type viewModels:HomeViewModel}}, Path=Cards}" Grid.Row="1" >
+                <CollectionView.ItemsLayout>
+                    <GridItemsLayout Orientation="Vertical" />
+                </CollectionView.ItemsLayout>
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="models:CardStock">
+                        <Frame BackgroundColor="#EAEAEA" CornerRadius="12" WidthRequest="284" HeightRequest="81" BorderColor="Transparent" Margin="0,20,0,10" FlowDirection="LeftToRight">
+                            <Grid RowDefinitions="*,*" ColumnDefinitions="*,*,*">
+                                <Label Text="{Binding Id}" TextColor="#79280F" HorizontalOptions="Start" Grid.Row="0" Grid.Column="0"/>
+                                <Image Source="{Binding Icon}" WidthRequest="33.91" Grid.Row="1" Grid.Column="0"/>
+                            </Grid>
+                        </Frame>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
+        </Grid>
+    </Grid>
+    
 </pages:BaseContentPage>
