--- a/Rincon/CustomPopups/ConfirmAddStockPage.xaml
+++ b/Rincon/CustomPopups/ConfirmAddStockPage.xaml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 <mopups:PopupPage
     x:Class="Rincon.CustomPopups.ConfirmAddStockPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
@@ -21,6 +21,7 @@
             BackgroundColor="White"
             HorizontalOptions="FillAndExpand"
             RowDefinitions="auto,auto,auto,auto,*,auto"
+            ColumnDefinitions="*"
             VerticalOptions="FillAndExpand">
             <Label
                 Margin="0,0,0,10"
@@ -49,7 +50,8 @@
                     Text="Estado"
                     TextColor="#79280F" />
                 <Label
-                    Margin="50,0,0,0"
+                    Margin="585,0,0,0"
+                    HorizontalOptions="EndAndExpand"
                     Text="Cantidad"
                     TextColor="#79280F" />
             </HorizontalStackLayout>
@@ -109,15 +111,15 @@
                 Grid.Row="5"
                 Margin="0,20,0,0"
                 HorizontalOptions="FillAndExpand"
-                VerticalOptions="Start">
+                VerticalOptions="FillAndExpand">
                 <Label
                     x:Name="DateTime"
                     Margin="0,0,30,0"
-                    HorizontalOptions="Start"
+                    HorizontalOptions="CenterAndExpand"
                     TextColor="#79280F"
                     VerticalOptions="Center" />
                 <Button
-                    Margin="20,0,20,0"
+                    Margin="300,0,20,0"
                     BackgroundColor="#D3AA84"
                     Clicked="OkAddStock_Clicked"
                     HeightRequest="35"
@@ -130,13 +132,13 @@
                     BackgroundColor="#FFF6ED"
                     Clicked="CancelAddStock_Clicked"
                     HeightRequest="35"
-                    HorizontalOptions="Center"
+                    HorizontalOptions="CenterAndExpand"
                     Text="Cancelar"
                     TextColor="#000000"
                     WidthRequest="220" />
 
                 <ImageButton
-                    Margin="30,0,0,0"
+                    Margin="300,0,0,0"
                     Padding="3"
                     BackgroundColor="#79280F"
                     Clicked="SavePDF_Clicked"
