--- a/Rincon/Pages/LoginPage.xaml
+++ b/Rincon/Pages/LoginPage.xaml
@@ -7,59 +7,72 @@
     xmlns:pages="clr-namespace:Rincon.Common.Pages;assembly=Rincon.Common"
     xmlns:viewModels="clr-namespace:Rincon.ViewModels"
     x:DataType="viewModels:LoginViewModel"
+    xmlns:local="clr-namespace:Rincon.Converters"
     x:TypeArguments="viewModels:LoginViewModel"
-    Shell.NavBarIsVisible="false"
-    BackgroundColor="#AD6B2A"
-    Shell.NavBarHasShadow="False" NavigationPage.HasBackButton="False" >
-    
+    Shell.NavBarIsVisible="False"
+    Shell.NavBarHasShadow="False">
 
-    <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="Center" Margin="0" Padding="0">
-        <StackLayout  HorizontalOptions="CenterAndExpand" Margin="0,0,0,50">
-            <Image Source="logo_login.png" WidthRequest="456" HeightRequest="248" Margin="0,0,0,0"/>
-        </StackLayout>
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <local:InvertedBoolConverter x:Key="InvertedBoolConverter"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
-        <StackLayout >
-            <ActivityIndicator
-                HeightRequest="32"
+
+    <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="0" Padding="0">
+
+        <StackLayout.Background>
+            <LinearGradientBrush EndPoint="0,1">
+                <GradientStop Offset="0.1" Color="#AD6B2A" />
+                <GradientStop Offset="1.0" Color="#D3AA84" />
+            </LinearGradientBrush>
+        </StackLayout.Background>
+
+        <Image Source="logo_login.png" WidthRequest="856" HeightRequest="348" Margin="0,100,0,50" HorizontalOptions="CenterAndExpand"/>
+        
+        <ActivityIndicator
+            VerticalOptions="Center"
+            HorizontalOptions="CenterAndExpand"
                 IsRunning="True"
-                IsVisible="{Binding IsBusy}"
-                WidthRequest="32" />
-        </StackLayout>
+                IsVisible="{Binding IsBusy}"/>
 
-        <Grid>
+        <Grid HorizontalOptions="CenterAndExpand" 
+              IsVisible="{Binding IsBusy, Converter={StaticResource InvertedBoolConverter}}">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="550"/>
-                <ColumnDefinition Width="550" />
+                <ColumnDefinition Width="850"/>
+                <ColumnDefinition Width="850" />
             </Grid.ColumnDefinitions>
-            <Frame Grid.Column="0" HasShadow="True" BackgroundColor="#4A744C" MaximumHeightRequest="350" MaximumWidthRequest="500" BorderColor="#40000000">
+
+            <Frame Grid.Column="0" HasShadow="True" BackgroundColor="#4A744C" HeightRequest="550" WidthRequest="700" BorderColor="#40000000" CornerRadius="24">
                 
                 <StackLayout Orientation="Vertical" VerticalOptions="Center" >
-                    <ImageButton Source="operator_login_icon.png" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="148.6" WidthRequest="129.89" BackgroundColor="#4A744C"></ImageButton>
+                    <ImageButton Source="operator_login_icon.png" VerticalOptions="Center" HorizontalOptions="Center" HeightRequest="300" WidthRequest="300" BackgroundColor="#4A744C"></ImageButton>
                     <Label Text="Operarios" HorizontalTextAlignment="Center" FontSize="23"/>
                 </StackLayout>
             </Frame>
-            <Frame Grid.Column="1" HasShadow="True" BackgroundColor="#D3AA84" MaximumHeightRequest="350" MaximumWidthRequest="500" BorderColor="#40000000">
-                <StackLayout>
-
-                    <Frame Margin="0,15,0,0" CornerRadius="18" BackgroundColor="#FAFAFA" BorderColor="Transparent" HeightRequest="35" WidthRequest="409" Padding="0,-10,0,-10">
+            <Frame Grid.Column="1" HasShadow="True" BackgroundColor="#D3AA84" HeightRequest="550" WidthRequest="700" BorderColor="#40000000" CornerRadius="24">
+                <StackLayout VerticalOptions="FillAndExpand" Spacing="10" Margin="0,30,0,30">
+                    <Frame HorizontalOptions="FillAndExpand" VerticalOptions="Start" Margin="30,60,30,0" CornerRadius="18" HeightRequest="50" BackgroundColor="#FAFAFA" BorderColor="Transparent"  Padding="0,-10,0,-10">
                         <Entry
                             BackgroundColor="Transparent"
-                            HeightRequest="35"
+                            HeightRequest="55"
                             PlaceholderColor="#797979"
+                            FontSize="20"
                             AutomationId="userNameEntry"
                             HorizontalOptions="FillAndExpand"
                             IsEnabled="{Binding IsEnabled}"
-                            MaxLength="25"
+                            MaxLength="50"
                             Placeholder="{extensions:Localize Username}"
                             Text="{Binding Username}"
                             TextColor="#303030"/>
                     </Frame>
 
-                    <Frame Margin="0,15,0,15" CornerRadius="18" BackgroundColor="#FAFAFA" BorderColor="Transparent" HeightRequest="35" WidthRequest="409" Padding="0,-10,0,-10">
+                    <Frame Margin="30,10,30,0" CornerRadius="18" BackgroundColor="#FAFAFA" BorderColor="Transparent" HeightRequest="50" HorizontalOptions="FillAndExpand" VerticalOptions="Start" Padding="0,-10,0,-10">
                         <Entry
                             VerticalOptions="Center"
                             TextColor="#303030"
-                            HeightRequest="35"
+                            HeightRequest="55"
+                            FontSize="20"
                             PlaceholderColor="#797979"
                             HorizontalOptions="FillAndExpand"
                             IsEnabled="{Binding IsEnabled}"
@@ -69,25 +82,30 @@
                             Text="{Binding Password}" />
                     </Frame>
 
-                    <Label Text="{extensions:Localize RecoverPassword}" HorizontalTextAlignment="End" TextColor="#79280F"/>
+                    <Label Text="{extensions:Localize RecoverPassword}" FontSize="18" HorizontalTextAlignment="End" TextColor="#79280F" VerticalOptions="Start" Margin="30,0,40,0"/>
 
 
                     <Button
-                        BackgroundColor="#79280F"
-                        Margin="0,46,0,0"
+                        VerticalOptions="EndAndExpand"
+                        BackgroundColor="#4A744C"
+                        Margin="30,10,30,0"
                         TextColor="#FAFAFA"
+                        HeightRequest="50"
+                        FontSize="18"
                         Command="{Binding LoginCommand}"
                         Text="{extensions:Localize Login}" 
-                        CornerRadius="9"/>
+                        CornerRadius="18"/>
 
 
                     <Button
-                        BackgroundColor="#4A744C"
-                        Margin="0,15,0,0"
+                        BackgroundColor="#AD6B2A"
+                        Margin="30,10,30,60"
+                        HeightRequest="50"
                         TextColor="#FAFAFA"
+                        FontSize="18"
                         Command="{Binding CheckinCommand}"
                         Text="{extensions:Localize SignUp}" 
-                        CornerRadius="9"/>
+                        CornerRadius="18"/>
 
                 </StackLayout>
             </Frame>
