--- a/Rincon/AppShell.xaml
+++ b/Rincon/AppShell.xaml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+﻿<?xml version="1.0" encoding="UTF-8" ?>
 <Shell
     x:Class="Rincon.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
@@ -17,9 +17,9 @@
 
 
     <ShellContent
-        Title="Inicio"
-        ContentTemplate="{DataTemplate pages:HomePage}"
-        Route="Home" />
+        Title="Splash"
+        ContentTemplate="{DataTemplate pages:SplashPage}"
+        Route="Splash" />
 
     <ShellContent
         Title="Sincronizar"
