--- a/Rincon/Pages/CheckinPage.xaml
+++ b/Rincon/Pages/CheckinPage.xaml
@@ -8,9 +8,16 @@
     xmlns:viewModels="clr-namespace:Rincon.ViewModels"
     x:DataType="viewModels:CheckinViewModel"
     x:TypeArguments="viewModels:CheckinViewModel"
-    BackgroundColor="#AAA">
+    Shell.NavBarIsVisible="false">
 
-    <StackLayout>
+    <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="0" Padding="0">
+        <StackLayout.Background>
+            <LinearGradientBrush EndPoint="0,1">
+                <GradientStop Offset="0.1" Color="#AD6B2A" />
+                <GradientStop Offset="1.0" Color="#D3AA84" />
+            </LinearGradientBrush>
+        </StackLayout.Background>
+
         <StackLayout Margin="0,12,0,0" HeightRequest="32" WidthRequest="400">
             <ActivityIndicator
                 HeightRequest="32"
@@ -19,68 +26,78 @@
                 WidthRequest="32" />
         </StackLayout>
 
-        <Entry   
-            BackgroundColor="Transparent"
-            HeightRequest="60"
-            PlaceholderColor="Black"
-            AutomationId="userNameEntry"
-            HorizontalOptions="FillAndExpand"
-            IsEnabled="{Binding IsEnabled}"
-            MaxLength="25"
-            Placeholder="{extensions:Localize Username}"
-            Text="{Binding Username}" />
+        <Image Source="rincon_white.png" HeightRequest="100" WidthRequest="400" HorizontalOptions="Start" Margin="160,50,0,0" />
 
-        <Entry   
-            BackgroundColor="Transparent"
-            HeightRequest="60"
-            PlaceholderColor="Black"
-            AutomationId="userNameEntry"
-            HorizontalOptions="FillAndExpand"
-            IsEnabled="{Binding IsEnabled}"
-            MaxLength="25"
-            Placeholder="{extensions:Localize Password}"
-            Text="{Binding Password}" />
+        <Frame CornerRadius="24" BackgroundColor="#D3AA84" Margin="160,100,160,0">
+            <VerticalStackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+            <Label Text="Registro" TextColor="Black" FontSize="24" FontAttributes="Bold" />
+            <Grid RowDefinitions="*,*,*,*,*,*" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" RowSpacing="10">
+                <Entry
+                    BackgroundColor="White"
+                    HeightRequest="60"
+                    PlaceholderColor="Black"
+                    HorizontalOptions="Start"
+                    MaxLength="25"
+                    Placeholder="{extensions:Localize Username}"
+                    Text="{Binding Username}" />
 
-        <Entry   
-            BackgroundColor="Transparent"
-            HeightRequest="60"
-            PlaceholderColor="Black"
-            AutomationId="userNameEntry"
-            HorizontalOptions="FillAndExpand"
-            IsEnabled="{Binding IsEnabled}"
-            MaxLength="25"
-            Placeholder="{extensions:Localize Password}"
-            Text="{Binding Password}" />
+                <Entry
+                    Grid.Row="1"
+                    BackgroundColor="Transparent"
+                    HeightRequest="60"
+                    PlaceholderColor="Black"
+                    HorizontalOptions="FillAndExpand"
+                    MaxLength="25"
+                    Placeholder="{extensions:Localize Password}"
+                    Text="{Binding Password}" />
 
-        <Picker Title="Pregunta de seguridad" ItemsSource="{Binding Questions}">
-        </Picker>
+                <Entry
+                    Grid.Row="2"
+                    BackgroundColor="Transparent"
+                    HeightRequest="60"
+                    PlaceholderColor="Black"
+                    HorizontalOptions="FillAndExpand"
+                    MaxLength="25"
+                    Placeholder="Repetir contraseña"
+                    Text="{Binding RepeatPassword}" />
 
-        <Entry   
-            BackgroundColor="Transparent"
-            HeightRequest="60"
-            PlaceholderColor="Black"
-            AutomationId="userNameEntry"
-            HorizontalOptions="FillAndExpand"
-            IsEnabled="{Binding IsEnabled}"
-            MaxLength="25"
-            Placeholder="{extensions:Localize Answer}"
-            Text="{Binding Answer}" />
+                <Picker Grid.Row="3" Title="Pregunta de seguridad" ItemsSource="{Binding Questions}">
+                </Picker>
 
-        <Button
-            BackgroundColor="#F5F5F5"
-            Margin="0,60,0,0"
-            TextColor="Black"
-            Command="{Binding CheckinCommand}"
-            Text="{extensions:Localize Checkin}" />
+                <Entry
+                    Grid.Row="4"
+                    BackgroundColor="Transparent"
+                    HeightRequest="60"
+                    PlaceholderColor="Black"
+                    HorizontalOptions="FillAndExpand"
+                    MaxLength="25"
+                    Placeholder="{extensions:Localize Answer}"
+                    Text="{Binding Answer}" />
+
+                <HorizontalStackLayout Grid.Row="5" HorizontalOptions="Center">
+                    <Button
+                        BackgroundColor="#4A744C"
+                        Margin="0,60,0,0"
+                        TextColor="White"
+                        Command="{Binding CheckinCommand}"
+                        Text="{extensions:Localize Checkin}" />
 
 
-        <Button
-            BackgroundColor="Grey"
-            Margin="0,20,0,0"
-            TextColor="Black"
-            Command="{Binding CancelCheckinCommand}"
-            Text="{extensions:Localize Cancel}" />
+                    <Button
+                        BackgroundColor="#AD6B2A"
+                        Margin="0,20,0,0"
+                        TextColor="#FFF6ED"
+                        Command="{Binding CancelCheckinCommand}"
+                        Text="{extensions:Localize Cancel}" />
 
+                </HorizontalStackLayout>
+
+            </Grid>
+
+            </VerticalStackLayout>
+            
+
+        </Frame>
     </StackLayout>
 
 </pages:BaseContentPage>
