--- a/Rincon/Pages/CheckinPage.xaml
+++ b/Rincon/Pages/CheckinPage.xaml
@@ -4,11 +4,18 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:extensions="clr-namespace:Rincon.Extensions"
+    xmlns:local="clr-namespace:Rincon.Converters"
     xmlns:pages="clr-namespace:Rincon.Common.Pages;assembly=Rincon.Common"
     xmlns:viewModels="clr-namespace:Rincon.ViewModels"
     x:DataType="viewModels:CheckinViewModel"
     x:TypeArguments="viewModels:CheckinViewModel"
     Shell.NavBarIsVisible="false">
+
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <local:InvertedBoolConverter x:Key="InvertedBoolConverter"/>
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
     <StackLayout HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" Margin="0" Padding="0">
         <StackLayout.Background>
@@ -28,72 +35,117 @@
 
         <Image Source="rincon_white.png" HeightRequest="100" WidthRequest="400" HorizontalOptions="Start" Margin="160,50,0,0" />
 
-        <Frame CornerRadius="24" BackgroundColor="#D3AA84" Margin="160,100,160,0">
-            <VerticalStackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
-            <Label Text="Registro" TextColor="Black" FontSize="24" FontAttributes="Bold" />
-            <Grid RowDefinitions="*,*,*,*,*,*" HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" RowSpacing="10">
-                <Entry
-                    BackgroundColor="White"
-                    HeightRequest="60"
-                    PlaceholderColor="Black"
-                    HorizontalOptions="Start"
-                    MaxLength="25"
-                    Placeholder="{extensions:Localize Username}"
-                    Text="{Binding Username}" />
+        <Frame CornerRadius="18" BackgroundColor="#D3AA84" Margin="260,100,260,300">
+            <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+            <Label Text="Registro" TextColor="Black" FontSize="26" FontAttributes="Bold" Margin="30,30,0,0"/>
+            <Grid RowDefinitions="auto,auto,auto,*,auto,*" HorizontalOptions="FillAndExpand" ColumnDefinitions="*" VerticalOptions="FillAndExpand" Margin="30,30,0,0">
+                    <Frame CornerRadius="18" HeightRequest="40" BackgroundColor="White" Margin="0,20,0,0" Padding="0,0,0,0" WidthRequest="300" HorizontalOptions="Start">
+                        <Entry
+                            BackgroundColor="White"
+                            HeightRequest="60"
+                            WidthRequest="300"
+                            PlaceholderColor="Black"
+                            HorizontalOptions="Start"
+                            MaxLength="25"
+                            Placeholder="{extensions:Localize Username}"
+                            Text="{Binding Username}" />
+                    </Frame>
 
-                <Entry
-                    Grid.Row="1"
-                    BackgroundColor="Transparent"
-                    HeightRequest="60"
-                    PlaceholderColor="Black"
-                    HorizontalOptions="FillAndExpand"
-                    MaxLength="25"
-                    Placeholder="{extensions:Localize Password}"
-                    Text="{Binding Password}" />
+                    <Frame Grid.Row="1" CornerRadius="18" HeightRequest="40" BackgroundColor="White" Margin="0,20,0,0" Padding="0,0,0,0" WidthRequest="300" HorizontalOptions="Start">
+                        <Entry
+                            BackgroundColor="Transparent"
+                            HeightRequest="60"
+                            WidthRequest="300"
+                            PlaceholderColor="Black"
+                            HorizontalOptions="FillAndExpand"
+                            MaxLength="25"
+                            Placeholder="{extensions:Localize Password}"
+                            Text="{Binding Password}" />
+                    </Frame>
 
-                <Entry
-                    Grid.Row="2"
-                    BackgroundColor="Transparent"
-                    HeightRequest="60"
-                    PlaceholderColor="Black"
-                    HorizontalOptions="FillAndExpand"
-                    MaxLength="25"
-                    Placeholder="Repetir contraseña"
-                    Text="{Binding RepeatPassword}" />
+                    <Frame Grid.Row="2" CornerRadius="18" HeightRequest="40" BackgroundColor="White" Margin="0,20,0,0" Padding="0,0,0,0" WidthRequest="300" HorizontalOptions="Start">
+                        <Entry
+                            BackgroundColor="Transparent"
+                            HeightRequest="60"
+                            WidthRequest="300"
+                            PlaceholderColor="Black"
+                            HorizontalOptions="FillAndExpand"
+                            MaxLength="25"
+                            Placeholder="Repetir contraseña"
+                            Text="{Binding RepeatPassword}" />
+                    </Frame>
 
-                <Picker Grid.Row="3" Title="Pregunta de seguridad" ItemsSource="{Binding Questions}">
-                </Picker>
+                    <StackLayout Grid.Row="3" HorizontalOptions="Start" WidthRequest="470" Margin="0,20,0,20">
+                        <Frame BackgroundColor="White" HeightRequest="40" CornerRadius="18" Margin="0" Padding="10,-3,10,-3">
+                            <Label Text="{Binding SeletedQuestion, Mode=TwoWay}" VerticalOptions="Center" FontSize="14">
+                                <Label.GestureRecognizers>
+                                    <TapGestureRecognizer Command="{Binding SelectQuestionCommand}"/>
 
-                <Entry
-                    Grid.Row="4"
-                    BackgroundColor="Transparent"
-                    HeightRequest="60"
-                    PlaceholderColor="Black"
-                    HorizontalOptions="FillAndExpand"
-                    MaxLength="25"
-                    Placeholder="{extensions:Localize Answer}"
-                    Text="{Binding Answer}" />
+                                </Label.GestureRecognizers>
 
-                <HorizontalStackLayout Grid.Row="5" HorizontalOptions="Center">
+                            </Label>
+                        </Frame>
+                    <Frame x:Name="FrameListQuestions" CornerRadius="24" IsVisible="{Binding IsVisibleListQuestions}" VerticalOptions="Start" HeightRequest="140">
+                            <Frame.Background> 
+                                 <LinearGradientBrush EndPoint="0,1">
+                                    <GradientStop Offset="0.1" Color="#FFFFFF" />
+                                    <GradientStop Offset="1.0" Color="#FFF6ED" />
+                                </LinearGradientBrush>
+                            </Frame.Background>
+                          <CollectionView HeightRequest="140" x:Name="Questions" SelectionChanged="Questions_SelectionChanged" ItemsSource="{Binding Questions}" SelectionMode="Single" HorizontalOptions="Start" VerticalOptions="Start">
+
+                            <CollectionView.ItemsLayout>
+                                <GridItemsLayout Orientation="Vertical" VerticalItemSpacing="10"/>
+                             </CollectionView.ItemsLayout>
+                            <CollectionView.ItemTemplate>
+                                <DataTemplate x:DataType="x:String">
+                                <Label
+                                        FontSize="18"
+                                        Grid.Column="2"
+                                        Text="{Binding .}"
+                                        TextColor="#000000"
+                                        VerticalOptions="Start" />
+                                    </DataTemplate>
+                            </CollectionView.ItemTemplate>
+                        </CollectionView>
+                       </Frame>
+
+                </StackLayout>
+
+                    <Frame Grid.Row="4" IsVisible="{Binding IsVisibleListQuestions, Converter={StaticResource InvertedBoolConverter}}" CornerRadius="18" HeightRequest="40" BackgroundColor="White" Margin="0,0,0,0" Padding="0,0,0,0" WidthRequest="300" HorizontalOptions="Start">
+                        <Entry
+                            
+                            BackgroundColor="Transparent"
+                            HeightRequest="60"
+                            WidthRequest="300"
+                            PlaceholderColor="Black"
+                            HorizontalOptions="FillAndExpand"
+                            MaxLength="25"
+                            Placeholder="{extensions:Localize Answer}"
+                            Text="{Binding Answer}" />
+                    </Frame>
+
+                    <HorizontalStackLayout Grid.Row="5" HorizontalOptions="EndAndExpand" Spacing="30" VerticalOptions="EndAndExpand">
                     <Button
                         BackgroundColor="#AD6B2A"
-                        Margin="0,20,0,0"
+                        Margin="0,20,0,50"
+                        HeightRequest="45"
+                        WidthRequest="200"
                         TextColor="#FFF6ED"
                         Command="{Binding CancelCheckinCommand}"
                         Text="{extensions:Localize Cancel}" />
                     <Button
                         BackgroundColor="#4A744C"
-                        Margin="0,60,0,0"
+                        Margin="0,20,55,50"
+                        HeightRequest="45"
+                        WidthRequest="200"
                         TextColor="White"
                         Command="{Binding CheckinCommand}"
                         Text="{extensions:Localize Checkin}" />
                 </HorizontalStackLayout>
 
-            </Grid>
-
-            </VerticalStackLayout>
-            
-
+                </Grid>
+            </StackLayout>
         </Frame>
     </StackLayout>
 
